up modalDialog css to ensure close X is clearly visible on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -218,7 +218,7 @@ body {
 }
 
 .modalDialog > div {
-	width: 95%;
+	width: 75%;
 	position: relative;
 	margin: 10% auto;
   padding: 8px 20px 24px 20px;
